# Life

./: LICENSE  README.md  main.json
A_funny_grabCut_after_uncomment_a_step/: CMakeLists.txt  grabCut.cpp
Course/: 1.马克思主义基本原理概论(13修订版-前5章)整理.md  马克思主义基本原理概论(13修订版-前5章)整理.md
Matlab/: data_fit.m  nonl_con.m
Matlab/Add-Ons/: Bp_net.m  Nonhomo_linear_equ.m  picture_extract_word.m  playtune.m  plfit.m  plplot.m  plpva.m  plvar.m  randht.m  rescure.mat  rescure_model.m  webpage_extract_excel.m
Matlab/D2017_queue_msmc/: Atmp.m  A区_两个time.fig  BD两区人时间和.fig  BD两区物时间和.fig  B区人时间.fig  B区物体时间.fig  ERROR_queu_MMCS2_demo.m  ERROR_queu_MMCS_demo.m  main.m  p_judge.m  queu_A_alone.m  queu_A_msmq2.m  queu_A_msmq3.m  queu_A_msmq4.m  queu_B_b_alone.m  queu_B_b_msmq2.m  queu_B_b_msmq3.m  queu_B_b_msmq4.m  queu_B_p_alone.m  queu_B_p_msmq2.m  queu_B_p_msmq3.m  queu_B_p_msmq4.m  queu_D_b_alone.m  queu_D_b_msmq2.m  queu_D_b_msmq3.m  queu_D_p_alone.m  queu_D_p_msmq2.m  queu_MMC_demo.m  queu_MMC_x_demo.m  queu_MMS_demo.m  time_tmp.mat  总的时间.fig
Matlab/D_2015_human_resources/: Mixed_int_linear_programming.m  data_fit.m  each_month_enable.m  each_month_enable_v2.m  main_program.md  main_program_170118003707.html  nonl.m  nonl_main.m  notes_另外这里还有一个网站.txt  plot_23.m  quad_programming.m  staff_cost.mat  stuff_cost.mat  stuff_each_bian_director_weight_matric_.txt  stuff_num1.xlsx  stuff_有向图权值矩阵.xlsx  stuff_能力矩阵.xlsx  textread.m  人员流动对公司组织效率的影响.md
Matlab/D_2016_WS_BA/: A.mat  Aver_Path_Length.m  B.mat  BA_net.m  C.mat  Clustering_Coefficient.m  Communicatie_wsnet.m  Degree_Distribution.m  H.mat  Hyper_wsnet_comp.m  I.mat  Inter_wsnet.m  T.mat  Television_wsnet.m  broadcast_wsnet.m  newspaper_data.mat  newspaper_wsnet.m
Matlab/Random_Process/: central_limit.m
OpenCV/A_funny_grabCut_after_uncomment_a_step/: CMakeLists.txt  grabCut.cpp
OpenCV/Conveyor belt monitoring/: CMakeLists.txt  Readme.md
OpenCV/Conveyor belt monitoring/src/: optical.cpp  optical.h
OpenCV/Dir_traverse_OpenCV3/: CMakeLists.txt  Readme.md
OpenCV/Dir_traverse_OpenCV3/src/: dir_tra.cpp
OpenCV/cv_cluster/: CMakeLists.txt
OpenCV/cv_cluster/src/: cluster.cpp
OpenCV/cv_optical/: CMakeLists.txt
OpenCV/cv_optical/src/: cluster.h  optical_o.cpp  optical_o.h
OpenCV/hsv_select_gui/: CMakeLists.txt  Readme.md  hsv_color.cpp
PCL/pcl_get/: CMakeLists.txt
PCL/pcl_get/src/: Filter.cpp  Filter.h  get.cpp  get.h
PCL/pcl_organized/: CMakeLists.txt
PCL/pcl_organized/src/: pcl_orgseg.cpp  pcl_orgseg.h  pcl_orgseg_qt.h
PCL/pcl_view/: CMakeLists.txt
PCL/pcl_view/src/: view_pcd.cpp  view_stream.cpp
Thinking/:  2017.1.1.md  "Probabilistic Multi-Class Segmentation for the Amazon Picking Challenge" .md  Robot Vision Segment Detect.md  Robot Vision Tool.md
